--- a/ibsen.css
+++ b/ibsen.css
@@ -1,5 +1,5 @@
 .speech{
-    font-family:sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 14px;
     color :black;
 }
@@ -7,18 +7,39 @@
     font-family:sans-serif;
     font-size: 14px;
     color: black;
-    background-color: lightgreen;
+    
 }
 .direction:hover{
     background-color: lightblue;
     color :blue
 }
 .SOLNESS{
-    color:lavender;
+    color:brown;
 }
 .KAIA{
-    color:pink;
+    color:green;
 }
 .HILDA{
-    color:aquamarine;
+    color:blueviolet;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+th, td {
+    border: 1px solid #211198;
+    padding: 10px;
+    text-align: center;
+    color:#211198;
+}
+
+th {
+    background-color: #f0f0f0;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
