--- a/ibsen.css
+++ b/ibsen.css
@@ -22,24 +22,24 @@
 .HILDA{
     color:blueviolet;
 }
-table {
+.classtable {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-th, td {
-    border: 1px solid #211198;
+.classtable th, .classtable td {
+    border: 1px solid darkblue;
     padding: 10px;
     text-align: center;
     color:#211198;
 }
 
-th {
-    background-color: #f0f0f0;
+.classtable th {
+    background-color: lightgrey;
 }
 
-tr:nth-child(even) {
-    background-color: #f2f2f2;
+.classtable tr {
+    background-color: whitesmoke;
 }
