--- a/ibsen.css
+++ b/ibsen.css
@@ -1,20 +1,24 @@
 .speech{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:sans-serif;
     font-size: 14px;
     color :black;
 }
-.direction{
+.name{
     font-family:sans-serif;
-    font-size: 14px;
+    color:black;
+} 
+.direction{
+    font-family: 'Arial', Helvetica, sans-serif;
+    font-size: 16px;
     color: black;
-    
+    background-color: #cae67e;
 }
 .direction:hover{
     background-color: lightblue;
     color :blue
 }
 .SOLNESS{
-    color:brown;
+    color:red; 
 }
 .KAIA{
     color:green;
@@ -40,6 +44,33 @@
     background-color: lightgrey;
 }
 
-.classtable tr {
+.classtable tr:nth-child(even) {
     background-color: whitesmoke;
 }
+.SOLNESS:hover {
+    text-shadow:2px 2px 4px blueviolet; 
+    border: 2px solid violet;
+    cursor: pointer; 
+}
+.KAIA:hover {
+    text-shadow:2px 2px 4px chartreuse; 
+    border:2px solid maroon;
+    cursor: pointer; 
+}
+.HILDA:hover {
+    text-shadow:2px 2px 4px fuchsia; 
+    border:2px solid red;
+    cursor: pointer; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
