--- a/ibsen.css
+++ b/ibsen.css
@@ -1,31 +1,38 @@
-.speech{
-    font-family:sans-serif;
+.speech {
+    font-family: sans-serif;
     font-size: 14px;
-    color :black;
+    color: black;
 }
-.name{
-    font-family:sans-serif;
-    color:black;
-} 
-.direction{
+
+.name {
+    font-family: sans-serif;
+    color: black;
+}
+
+.direction {
     font-family: 'Arial', Helvetica, sans-serif;
     font-size: 16px;
     color: black;
     background-color: #cae67e;
 }
-.direction:hover{
+
+.direction:hover {
     background-color: lightblue;
-    color :blue
+    color: blue
 }
-.SOLNESS{
-    color:red; 
+
+.SOLNESS {
+    color: red;
 }
-.KAIA{
-    color:green;
+
+.KAIA {
+    color: green;
 }
-.HILDA{
-    color:blueviolet;
+
+.HILDA {
+    color: blueviolet;
 }
+
 .classtable {
     width: 100%;
     border-collapse: collapse;
@@ -33,11 +40,12 @@
     margin-bottom: 20px;
 }
 
-.classtable th, .classtable td {
+.classtable th,
+.classtable td {
     border: 1px solid darkblue;
     padding: 10px;
     text-align: center;
-    color:#211198;
+    color: #211198;
 }
 
 .classtable th {
@@ -47,30 +55,45 @@
 .classtable tr:nth-child(even) {
     background-color: whitesmoke;
 }
+
 .SOLNESS:hover {
-    text-shadow:2px 2px 4px blueviolet; 
+    text-shadow: 2px 2px 4px blueviolet;
     border: 2px solid violet;
-    cursor: pointer; 
+    cursor: pointer;
 }
+/*
+.SOLNESS:hover {
+    
+    border: 2px solid;
+    cursor: pointer;
+}  */
+
 .KAIA:hover {
-    text-shadow:2px 2px 4px chartreuse; 
-    border:2px solid maroon;
-    cursor: pointer; 
+    text-shadow: 2px 2px 4px chartreuse;
+    border: 2px solid maroon;
+    cursor: pointer;
 }
+
 .HILDA:hover {
-    text-shadow:2px 2px 4px fuchsia; 
-    border:2px solid red;
-    cursor: pointer; 
+    text-shadow: 2px 2px 4px fuchsia;
+    border: 2px solid red;
+    cursor: pointer;
 }
 
+li {
+    display: inline;
+}
 
+li {
+    float: left;
+}
 
+li {
+    float: left;
+}
 
-
-
-
-
-
-
-
-
+li {
+    display: block;
+    padding: 8px;
+    background-color: rgb(95, 110, 220);
+}
